[project]
name = "comfyui-synctalk"
description = "ComfyUI implemntation for [a/SyncTalk](https://github.com/ZiqiaoPeng/SyncTalk)"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["setuptools", "wheel", "twine"]

[project.urls]
Repository = "https://github.com/Ryuukeisyou/ComfyUI-SyncTalk"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SyncTalk"
Icon = ""
